        Reviewed by Adele.

https://bugs.webkit.org/show_bug.cgi?id=18652
        onchange events don't seem to fire for input[type=range] controls.

        Fire changeEvent when dragging the slider.



Canonical link: https://commits.webkit.org/25888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32610 268f45cc-cd09-0410-ab3c-d52691b4dbfc